Setup base theming (deleted all Seti-related things)

--- a/styles/default-theme.less
+++ b/styles/default-theme.less
@@ -1,5 +1,8 @@
 // PRIMARY COLORS
-@seti-primary: @blue;
-@seti-primary-text: @blue-text;
-@seti-primary-highlight: @blue-highlight;
-@seti-secondary: @blue-secondary;
+@define-primary: @blue;
+@define-primary-text: @blue-text;
+@define-primary-highlight: @blue-highlight;
+@define-secondary: @blue-secondary;
+@primary: @blue;
+@primary-text: @blue-text;
+@primary-highlight: @blue-highlight;
