--- a/styles/modals.less
+++ b/styles/modals.less
@@ -1,7 +1,7 @@
 // TOOLTIPS
 .tooltip {
   font-size: 12px;
-  font-family: @seti-font-family;
+  font-family: @font-family;
 
   .tooltip-inner {
     padding: 10px 15px;
@@ -32,16 +32,16 @@ atom-text-editor {
       }
     }
     .autocomplete-suggestion-list .list-group .selected {
-      background-color: @seti-primary;
-      color: @seti-primary-text;
+      background-color: @define-primary;
+      color: @define-primary-text;
     }
     .autocomplete-suggestion-list .list-group {
       background-color: @black-dark;
     }
 
     .corrections .list-group .selected {
-      background-color: @seti-primary;
-      color: @seti-primary-text;
+      background-color: @define-primary;
+      color: @define-primary-text;
       &:before {
         display: none;
       }
