--- a/styles/plugins/linter.less
+++ b/styles/plugins/linter.less
@@ -1,13 +1,13 @@
 .linter-highlight {
   &.badge {
-    background-color: @seti-primary;
-    color: @seti-primary-text;
+    background-color: @define-primary;
+    color: @define-primary-text;
   }
 }
 
 .linter-message-item .badge {
-  background: @seti-primary-text;
-  color: @seti-primary;
+  background: @define-primary-text;
+  color: @define-primary;
 }
 
 linter-panel {
@@ -26,7 +26,7 @@ linter-bottom-tab {
   background: @black;
   color: @grey;
   &.active {
-    background: @seti-primary;
-    color: @seti-primary-text;
+    background: @define-primary;
+    color: @define-primary-text;
   }
 }
