--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -1,4 +1,4 @@
-atom-workspace:not(.seti-compact) atom-panel.bottom {
+atom-workspace:not(.define-compact) atom-panel.bottom {
   padding: 10px 10px;
 }
 
