--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -1,9 +1,25 @@
 // SET COLOR & HOVER EFFECT FOR A LINK
-.link-color(@color: @seti-primary) {
+.link-color(@color: @text, @background: transparent, @active: @primary, @hover: @primary-highlight) {
+    transition: 0.25s all;
     color: @color;
-    transition: 0.25s color;
+    background: @background;
     &:hover {
-      color: lighten(@color, 15%);
+      color: lighten(@hover, 15%);
+      background: mix(@background, @hover);
+      cursor: pointer;
+      text-decoration: none;
+    }
+    &.active {
+      color: lighten(@active, 15%);
+      background: mix(@background, @active);
+      text-decoration: none;
+    }
+}
+.link-background-color(@color: @primary-highlight) {
+    background-color: @color;
+    transition: 0.25s all;
+    &:hover {
+      background-color: lighten(@color, 25%);
       cursor: pointer;
       text-decoration: none;
     }
@@ -46,7 +62,7 @@
   atom-text-editor[mini], atom-text-editor[mini]::shadow {
     background: @bg;
     color: @color;
-    font-family: @seti-font-family;
+    font-family: @font-family;
     font-size: 14px;
     font-weight: 300;
     height: 45px;
@@ -60,7 +76,7 @@
     }
 
     .highlights .highlight.selection .region {
-      background: @seti-primary;
+      background: @define-primary;
       color: @white;
     }
 
@@ -75,7 +91,7 @@
   atom-text-editor[mini], atom-text-editor[mini]::shadow {
     background: @bg;
     color: @color;
-    font-family: @seti-font-family;
+    font-family: @font-family;
     font-size: 12px;
     font-weight: 500;
     letter-spacing: 0.05em;
@@ -86,8 +102,8 @@
     }
 
     .highlights .highlight.selection .region {
-      background: @seti-primary;
-      color: @seti-primary-text !important;
+      background: @define-primary;
+      color: @define-primary-text !important;
     }
 
     .lines .cursors .cursor {
