--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -5,10 +5,9 @@
 // - - - - - - - - - - - - - - - - - - - - - - - -
 
 @import "default-theme"; // SET DEFAULT THEME COLORS IN CASE USE HASN'T SET THEM.
-@import "user-theme"; // OVERRIDE DEFAULT COLORS WITH USER THEME
 
 // BASE COLORS
-@black: #0e1112;
+@black: #070708;
 @black-dark: #090b0d;
 @white: #d4d7d6;
 @grey: #4d5a5e;
@@ -79,7 +78,7 @@
 
 @good: @green;
 @bad: @red;
-@warn: @yellow;
+@warn: #decd87;
 @hidden: @grey-dark;
 @ignore: #41535b;
 
@@ -92,10 +91,10 @@
 
 
 // SITE COLORS
-@ui-site-color-1: @seti-primary;
+@ui-site-color-1: @primary;
 @ui-site-color-2: @green;
-@ui-site-color-3: @seti-primary-highlight;
-@ui-site-color-4: @yellow;
+@ui-site-color-3: @primary-highlight;
+@ui-site-color-4: @warn;
 @ui-site-color-5: @red;
 
 
@@ -103,8 +102,8 @@
 @text-color: @white;
 @text-color-subtle: #aaaaaa;
 @text-color-highlight: @white;
-@text-color-selected: @seti-primary;
-@text-color-info: @seti-primary;
+@text-color-selected: @primary;
+@text-color-info: @primary;
 @text-color-success: @good;
 @text-color-warning: @warn;
 @text-color-error: @bad;
@@ -112,11 +111,11 @@
 
 
 // BACKGROUND
-@background-color-highlight: @seti-primary;
-@background-color-selected: @seti-primary;
-@background-color-info: @seti-primary;
+@background-color-highlight: @primary;
+@background-color-selected: @primary;
+@background-color-info: @primary;
 @background-color-success: @green;
-@background-color-warning: @yellow;
+@background-color-warning: darken(@warn, 20%);
 @background-color-error: @red;
 
 
@@ -151,15 +150,15 @@
 // BUTTONS
 @button-background-color: @grey;
 @button-background-color-hover: @grey-dark;
-@button-background-color-selected: @seti-primary;
+@button-background-color-selected: @primary;
 @button-border-color: @base-border-color;
 
 
 // MISC
-@seti-font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @font-size: 12px;
 @disclosure-arrow-size: 12px;
 
 // SCROLLBARS
-@scrollbar-background-color: rgba(42, 42, 42, 0.5);
+@scrollbar-background-color: rgba(42, 42, 42, 0.1);
 @scrollbar-color: rgba(92, 92, 92, 0.5);
