--- a/styles/_base.less
+++ b/styles/_base.less
@@ -6,7 +6,7 @@ atom-workspace {
   font-size: @font-size;
   background-color: @app-background-color;
 
-  &.seti-roboto {
-    font-family: @seti-font-family;
+  &.define-roboto {
+    font-family: @font-family;
   }
 }
