--- a/styles/find-replace.less
+++ b/styles/find-replace.less
@@ -17,25 +17,25 @@
   .btn-group {
     .btn { transition: background 0.3s; }
     &-find .btn {
-    background: @seti-primary;
-    color: @seti-primary-text;
+    background: @primary;
+    color: @primary-text;
     &:hover {
-      background-color: @seti-primary-highlight;
-      color: @seti-primary-text;
+      background-color: @primary-highlight;
+      color: @define-primary-text;
     }
     }
     &-replace .btn {
-      background: darken(@bad, 20%);
-      color: @white;
+      background: darken(@primary, 20%);
+      color: @primary-text;
       &:hover {
-        background-color: darken(@bad, 30%);
+        background-color: darken(@primary-highlight, 30%);
       }
     }
     &-replace-all .btn {
-      background: @bad;
-      color: @white;
+      background: @primary;
+      color: @primary-text;
       &:hover {
-        background-color: lighten(@bad, 10%);
+        background-color: lighten(@primary-highlight, 10%);
       }
     }
   }
