--- a/styles/plugins/autocomplete-plus.less
+++ b/styles/plugins/autocomplete-plus.less
@@ -8,11 +8,11 @@ autocomplete-suggestion-list {
       li {
         color: @white;
         &.selected {
-          background: @seti-primary;
-          color: @seti-primary-text;
+          background: @define-primary;
+          color: @define-primary-text;
           .word {
             .character-match {
-              color: @seti-primary-highlight;
+              color: @define-primary-highlight;
             }
           }
           &::before {
@@ -22,7 +22,7 @@ autocomplete-suggestion-list {
         .word {
           color: @white !important;
           .character-match {
-            color: @seti-primary;
+            color: @define-primary;
           }
         }
       }
@@ -33,13 +33,13 @@ autocomplete-suggestion-list {
       border: solid 1px @black;
       &-content {
         color: @white;
-        font-family: @seti-font-family;
+        font-family: @font-family;
         font-weight: 300;
         font-size: 0.9em;
       }
       &-more-link {
-        color: @seti-primary;
-        font-family: @seti-font-family;
+        color: @define-primary;
+        font-family: @font-family;
         font-size: 0.9em;
       }
     }
