--- a/styles/preview-pane.less
+++ b/styles/preview-pane.less
@@ -1,13 +1,13 @@
 .preview-pane {
   .panel-heading {
     .preview-count {
-      font-family: @seti-font-family;
+      font-family: @font-family;
       font-weight: 100;
       font-size: 30px;
       padding: 10px;
     }
     .highlight-info {
-      color: @seti-primary;
+      color: @define-primary;
     }
   }
   .results-view {
@@ -23,10 +23,10 @@
       }
       &.selected {
         .path-details.list-item {
-          background: @seti-primary;
-          color: @seti-primary-text;
+          background: @define-primary;
+          color: @define-primary-text;
           .path-match-number {
-            color: @seti-primary-highlight;
+            color: @define-primary-highlight;
           }
         }
         &::before {
@@ -42,7 +42,7 @@
           font-size: 15px;
         }
         .path-match-number {
-          color: @seti-primary;
+          color: @define-primary;
           font-weight: bold;
           letter-spacing: 0.075em;
         }
@@ -58,7 +58,7 @@
 
           // MATCHED WORD
           .highlight-info {
-            color: @seti-primary;
+            color: @define-primary;
             box-shadow: none;
           }
           .highlight-error {
@@ -75,8 +75,8 @@
           }
 
           &.selected {
-            background: @seti-primary;
-            color: @seti-primary-text;
+            background: @define-primary;
+            color: @define-primary-text;
 
             .highlight-error {
               color: @white;
@@ -90,18 +90,18 @@
             }
 
             .highlight-info {
-              color: @seti-primary-highlight;
+              color: @define-primary-highlight;
             }
 
             .line-number {
-              color: @seti-primary-text;
+              color: @define-primary-text;
             }
             &::before {
               display: none;
             }
           }
           .line-number {
-            color: @seti-primary;
+            color: @define-primary;
           }
         }
       }
