--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -4,6 +4,6 @@
 
 // TWEAKS FOR RIGHT SIDE PLACEMENT
 atom-panel-container.right {
-  border-left: solid 1px rgba(0,0,0,0.25);
-  box-shadow: -5px 0px 1px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.1);
+  position: relative;
 }
