--- a/styles/sidebar/header.less
+++ b/styles/sidebar/header.less
@@ -55,7 +55,7 @@ atom-panel-container {
 
     .icon-repo {
       &::before {
-        background: url('atom://seti-ui/icons/project.svg') no-repeat;
+        background: url('atom://define-ui/icons/project.svg') no-repeat;
         content: '';
         height: 30px;
         margin-bottom: -10px;
@@ -72,7 +72,7 @@ atom-panel-container {
 }
 
 // COMPACT MODE
-atom-workspace.seti-compact {
+atom-workspace.define-compact {
   atom-panel-container {
     .project-root {
       padding-top: @top-bar-small;
